@@ -11,6 +11,9 @@
 1、新功能：增加自动注册ab测试
 2、新功能：增加创建角色ab测试
 
+[seaking_serverTest_1.0.0.1 2013-10-20 张春生]
+1、新功能：增加ab测试
+
 --备注分类
 1、新功能：
 2、Bug:
